<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_prev"
        android:icon="@drawable/ic_action_back_disabled"
        android:showAsAction="always"
        android:title="@string/previous"/>
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_action_forward_disabled"
        android:showAsAction="always"
        android:title="@string/next"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always|collapseActionView"
        android:title="@string/Share"/>
    <item
        android:id="@+id/action_browser"
        android:icon="@drawable/ic_action_web_site"
        android:showAsAction="always"
        android:title="@string/browser"/>

</menu>