<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img" >

    <LinearLayout
        android:id="@+id/scoreboardKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/sb_key_bg"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/imageAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pixel_stroke"
            android:src="@drawable/sb_key_away" />

        <TextView
            android:id="@+id/txtAwayKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:paddingRight="15dp"
            android:text="@string/awayTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pixel_stroke"
            android:src="@drawable/sb_key_home" />

        <TextView
            android:id="@+id/txtHomeKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:paddingRight="15dp"
            android:text="@string/homeTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageNeutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pixel_stroke"
            android:src="@drawable/sb_key_neutral" />

        <TextView
            android:id="@+id/txtNeutalKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/neutralTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/scoreboardEventKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/sb_key_bg"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/txtScrimmage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:text="@string/scrimmageTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/txtScrimmage"
            android:singleLine="true"
            android:text="@string/conferenceTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtExhibition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/txtScrimmage"
            android:singleLine="true"
            android:text="@string/exhibitionTxt"
            android:textColor="@color/scoreboardKeyText"
            android:textSize="@dimen/scoreboard_tablet_subText"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/recordHeader"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:layout_below="@id/scoreboardKeys"
        android:layout_centerHorizontal="true"
        android:background="@color/HyperlinksColor"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/recordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/scoreboardEventKeys"
        android:layout_below="@id/recordHeader"
        android:cacheColorHint="#00000000"
        android:listSelector="@color/TableCellSelection" >

    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noResults"
        android:textColor="@android:color/black"
        android:textSize="@dimen/noResult_text_size"
        android:textStyle="bold" />

</RelativeLayout>